# dbt-bigquery-template

./: Makefile  README.md  emulator.yml  pyproject.toml
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/models/example/: my_first_dbt_model.sql
dbt/models/interface/: sample.sql
dbt/models/raw/: raw.yml
util/: generate_dbt_docs.py
