[tool.poetry]
name = "dbt-bigquery-template"
version = "0.1.0"
description = ""
authors = ["ustato <https://twitter.com/hardustato>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
dbt-core = "1.3.0"
dbt-bigquery = {git = "https://github.com/ustato/dbt-bigquery.git", rev = "0.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
